dist/yaml/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tsubasa-admin
  namespace: development
  labels:
    app.axionhq.io.name: tsubasa-admin
    app.axionhq.io.part-of: axionhq-ld
    app.axionhq.io.component: tsubasa-admin-backend-module
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.axionhq.io.name: tsubasa-admin
  template:
    metadata:
      labels:
        app.axionhq.io.name: tsubasa-admin
    spec:
      containers:
        - name: tsubasa-admin
          image: gcr.io/axionhq/tsubasa-admin:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3001
---
