dist/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tsubasa-admin
  namespace: development
  labels:
    app.axionhq.io.name: tsubasa-admin
    app.axionhq.io.part-of: axionhq-ld
    app.axionhq.io.component: tsubasa-admin-backend-module
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3001
  selector:
    app.axionhq.io.name: tsubasa-admin
